# moving_averages

./: CHANGELOG.md  Cargo.toml  README.md
benches/: benchmark.rs
src/: ema.rs  lib.rs  rma.rs  sma.rs
tests/: integration_test.rs
